[tool.poetry]
name = "python-backend-hw"
version = "0.1.0"
description = ""
authors = ["Sergey Kuznetsov <Kyzy77777@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.6"
requests = "^2.32.3"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
